
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ UINT ;
typedef int SSTP_ATTRIBUTE ;
typedef int LIST ;


 int * LIST_DATA (int *,scalar_t__) ;
 scalar_t__ LIST_NUM (int *) ;
 int ReleaseList (int *) ;
 int SstpFreeAttribute (int *) ;

void SstpFreeAttributeList(LIST *o)
{
 UINT i;

 if (o == ((void*)0))
 {
  return;
 }

 for (i = 0;i < LIST_NUM(o);i++)
 {
  SSTP_ATTRIBUTE *a = LIST_DATA(o, i);

  SstpFreeAttribute(a);
 }

 ReleaseList(o);
}
